--- a/src/style.css
+++ b/src/style.css
@@ -3,11 +3,91 @@ background-color: #F7F5FD;
 font-family: "Roboto", sans-serif;
 }
 
+header{
+    border-bottom: 1px solid #F7F5FD;
+    padding: 0 0 30px 0;
+}
+
 .weather-app{
-    background: whitesmoke;
-    max-width: 900px;
+    background: #FFFFFF;
+    max-width: 600px;
     margin: 30px auto;
     padding: 40px;
     box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
     border-radius: 16px;
+}
+
+.search-form-input{
+    background-color: #F9F7FE;
+    border: none;
+    border-radius: 6px;
+    width: 80%;
+    padding: 20px;
+    font-size: 16px;
+}
+
+.search-form-button{
+    background:#885DF1;
+    padding: 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 6px;
+    margin-left: 5px ;
+    color: white;
+    font-size: 16px ;
+}
+
+main {
+    padding: 30px
+}
+
+.weather-app-data{
+    display: flexbox;
+    justify-content: space-between;
+}
+
+.weather-app-city{
+    margin: 0;
+    font-size: 38px;
+    line-height: 48px;
+}
+
+.weather-app-details{
+    font-size: 14px ;
+    line-height: 20px;
+    color: #A9A6B3;
+    font-weight:500;
+}
+
+.weather-app-details strong{
+    color: #F65282;
+}
+
+.weather-app-temperature-container{
+    display: flex;
+}
+
+.weather-app-temperature{
+    font-size: 88px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.weather-app-icon{
+    font-size: 44px;
+    margin-top: 22px
+}
+
+.weather-app-unit{
+    margin-top: 16px;
+}
+
+footer{
+    border-top: 1px solid #F7F5FD;
+    padding: 30px 0 0 0;
+    font-size: 14px;
+}
+
+a {
+    color: #885DF1;
 }
