--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ main {
 }
 
 .weather-app-data {
-    display: flexbox;
+    display: flex;
     justify-content: space-between;
 }
 
@@ -74,22 +74,23 @@ main {
 .weather-app-temperature {
     font-size: 88px;
     font-weight: bold;
-    margin-top: 10px;
+    line-height: 88px;
 }
 
 .weather-app-icon {
-    font-size: 44px;
-    margin-right: 10px;
-    position:relative;
+    width: 88px;
+    height: 88px;
 }
 
 .weather-app-unit {
     margin-top: 16px;
+    font-size: 28px
 }
 
 footer{
     border-top: 1px solid #F7F5FD;
     padding: 30px 0 0 0;
     font-size: 14px;
+    text-align: center;
 }
 
